--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>Flip a Coin</h1>
 <button id="Tail" type="button" name="button">Tail</button>
-<button id="Head" type="button" name="button">Head</button>
-<section id="#flipCoins" class="coin flip">
 
+<button id="Head" type="button" name="button">Head</button>
+<img src="quarterhead.jpg" alt="">
+<section id="#flipCoins" class="coin flip">
+<h2></h2>
 </section>
 <img id="tailImage"src="" alt="">
 
